[package]
name = "bytefield"
description = "A pure Rust, no-std implementation of bit fields"
version = "0.1.0"
keywords = ["bitfield", "bitset", "flag"]
categories = ["no-std"]

repository = "https://github.com/Jaxydog/bytefield"
readme = "README.md"
license = "MIT"

edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false
optional = true

[features]
serde = ["dep:serde"]